# codex-gauge

./: .gitignore  README.md  RELEASE.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: DESIGN.md  RELEASE.md  SECURITY.md
scripts/: diagnose-codex.mjs  diagnose-reset-credits.mjs  macos-dev.sh  merge-updater-manifest.mjs  sync-version.mjs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  lib.rs  main.rs  tray.rs  updater.rs  window.rs
src-tauri/src/codex/: app_server.rs  auth_json.rs  mod.rs  parser.rs  protocol.rs  reset.rs  session_usage.rs  snapshot.rs
src-tauri/src/storage/: config.rs  mod.rs  state.rs
src-tauri/src/tray/: indicator.rs
src/app/: App.svelte  mac-menu.css  styles.css
src/app/stores/: gauge.ts
src/components/: DetailPanel.svelte  FloatingWidget.svelte  MacMenuPanel.svelte  SettingsPanel.svelte  TopStatusWidget.svelte  UsageRing.svelte  UsageRow.svelte
src/lib/: api.ts  format.ts  reset.ts  types.ts  usage.ts  window.ts
