[package]
name = "codex-gauge"
version = "0.1.0"
description = "A lightweight Windows desktop gauge for Codex usage"
authors = ["Codex Gauge Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "codex_gauge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
